--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -669,8 +669,8 @@
    "source": [
     "#| export\n",
     "def format_exc(e):\n",
-    "    \"Format exception `e` as a string\"\n",
-    "    return ''.join(traceback.format_exception(type(e), e, e.__traceback__))"
+    "    \"Format exception `e` as a string list\"\n",
+    "    return traceback.format_exception(type(e), e, e.__traceback__)"
    ]
   },
   {
@@ -708,7 +708,8 @@
     "    if r is not None and not o.quiet:\n",
     "        res.append(_mk_out(*fmt.format(r), 'execute_result'))\n",
     "    if 'execution_count' not in o: o['execution_count']=None\n",
-    "    for p in res: p['execution_count'] = o['execution_count']\n",
+    "    for p in res:\n",
+    "        if p[\"output_type\"]==\"execute_result\": p['execution_count'] = o['execution_count']\n",
     "    return res"
    ]
   },
@@ -749,10 +750,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout',\n",
-       "  'output_type': 'stream',\n",
-       "  'text': ['1\\n'],\n",
-       "  'execution_count': None}]"
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}]"
       ]
      },
      "execution_count": null,
@@ -781,9 +779,8 @@
       "text/plain": [
        "[{'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 1 us, total: 3 us\\n',\n",
-       "   'Wall time: 4.29 us\\n'],\n",
-       "  'execution_count': None},\n",
+       "  'text': ['CPU times: user 4 us, sys: 1 us, total: 5 us\\n',\n",
+       "   'Wall time: 9.06 us\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
@@ -869,13 +866,14 @@
        "   'File \\x1b[0;32m<ipython-input-1-9e1622b385b6>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;241m1\\x1b[39m\\x1b[38;5;241m/\\x1b[39m\\x1b[38;5;241m0\\x1b[39m\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m: division by zero\\n'],\n",
-       "  'execution_count': None},\n",
+       "   '\\x1b[0;31mZeroDivisionError\\x1b[0m: division by zero\\n']},\n",
        " {'ename': 'ZeroDivisionError',\n",
        "  'evalue': 'division by zero',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\nZeroDivisionError: division by zero\\n',\n",
-       "  'execution_count': None}]"
+       "  'traceback': ['Traceback (most recent call last):\\n',\n",
+       "   '  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n',\n",
+       "   '  File \"<ipython-input-1-9e1622b385b6>\", line 1, in <module>\\n    1/0\\n    ~^~\\n',\n",
+       "   'ZeroDivisionError: division by zero\\n']}]"
       ]
      },
      "execution_count": null,
@@ -896,10 +894,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout',\n",
-       "  'output_type': 'stream',\n",
-       "  'text': ['no timeout\\n'],\n",
-       "  'execution_count': None}]"
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['no timeout\\n']}]"
       ]
      },
      "execution_count": null,
@@ -1025,7 +1020,7 @@
        "File &lt;ipython-input-1-a5c3817716b6&gt;:1\n",
        "----&gt; 1 import time; time.sleep(1.1)\n",
        "\n",
-       "Cell In[143], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
+       "Cell In[58], line 7, in run_cell.&lt;locals&gt;.handler(*args)\n",
        "----&gt; 7 def handler(*args): raise TimeoutError()\n",
        "\n",
        "TimeoutError: \n",
@@ -1064,7 +1059,7 @@
        "File <span class=\"ansi-green-fg\">&lt;ipython-input-1-a5c3817716b6&gt;:1</span>\n",
        "<span class=\"ansi-green-fg\">----&gt; 1</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">import</span> <span class=\"ansi-bold\" style=\"color: rgb(0,0,255)\">time</span>; time<span style=\"color: rgb(98,98,98)\">.</span>sleep(<span style=\"color: rgb(98,98,98)\">1.1</span>)\n",
        "\n",
-       "Cell <span class=\"ansi-green-fg\">In[143], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
+       "Cell <span class=\"ansi-green-fg\">In[58], line 7</span>, in <span class=\"ansi-cyan-fg\">run_cell.&lt;locals&gt;.handler</span><span class=\"ansi-blue-fg\">(*args)</span>\n",
        "<span class=\"ansi-green-fg\">----&gt; 7</span> <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">def</span> <span style=\"color: rgb(0,0,255)\">handler</span>(<span style=\"color: rgb(98,98,98)\">*</span>args): <span class=\"ansi-bold\" style=\"color: rgb(0,135,0)\">raise</span> <span class=\"ansi-bold\" style=\"color: rgb(215,95,95)\">TimeoutError</span>()\n",
        "\n",
        "<span class=\"ansi-red-fg\">TimeoutError</span>: \n",
@@ -1139,13 +1134,14 @@
        "   'File \\x1b[0;32m<ipython-input-1-01648acb07bd>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOops\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mException\\x1b[0m: Oops\\n'],\n",
-       "  'execution_count': None},\n",
+       "   '\\x1b[0;31mException\\x1b[0m: Oops\\n']},\n",
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oops',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-01648acb07bd>\", line 1, in <module>\\n    raise Exception(\"Oops\")\\nException: Oops\\n',\n",
-       "  'execution_count': None}]"
+       "  'traceback': ['Traceback (most recent call last):\\n',\n",
+       "   '  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n',\n",
+       "   '  File \"<ipython-input-1-01648acb07bd>\", line 1, in <module>\\n    raise Exception(\"Oops\")\\n',\n",
+       "   'Exception: Oops\\n']}]"
       ]
      },
      "execution_count": null,
@@ -1242,10 +1238,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout',\n",
-       "  'output_type': 'stream',\n",
-       "  'text': ['1\\n'],\n",
-       "  'execution_count': None},\n",
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
@@ -1521,13 +1514,14 @@
        "   'File \\x1b[0;32m<ipython-input-1-1c97c1d317ab>:1\\x1b[0m\\n',\n",
        "   '\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
        "   '\\n',\n",
-       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!\\n'],\n",
-       "  'execution_count': None},\n",
+       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!\\n']},\n",
        " {'ename': 'Exception',\n",
        "  'evalue': 'Oopsie!',\n",
        "  'output_type': 'error',\n",
-       "  'traceback': 'Traceback (most recent call last):\\n  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n  File \"<ipython-input-1-1c97c1d317ab>\", line 1, in <module>\\n    raise Exception(\"Oopsie!\")\\nException: Oopsie!\\n',\n",
-       "  'execution_count': None}]"
+       "  'traceback': ['Traceback (most recent call last):\\n',\n",
+       "   '  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n',\n",
+       "   '  File \"<ipython-input-1-1c97c1d317ab>\", line 1, in <module>\\n    raise Exception(\"Oopsie!\")\\n',\n",
+       "   'Exception: Oopsie!\\n']}]"
       ]
      },
      "execution_count": null,
@@ -1616,10 +1610,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'stdout',\n",
-       "  'output_type': 'stream',\n",
-       "  'text': ['1\\n'],\n",
-       "  'execution_count': None},\n",
+       "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
        " {'data': {'text/plain': ['2']},\n",
        "  'metadata': {},\n",
        "  'output_type': 'execute_result',\n",
@@ -1686,7 +1677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'execution_count': None, 'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}]\n"
+      "[{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']}, {'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}]\n"
      ]
     }
    ],
@@ -1747,23 +1738,7 @@
       "===========================================================================\n",
       "\n",
       "While Executing Cell #2:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/1421292703.py\", line 3, in <module>\n",
-      "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/3609882568.py\", line 18, in execute\n",
-      "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
-      "  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_6273/3068237356.py\", line 19, in run_all\n",
-      "    if self.exc and exc_stop: raise self.exc from None\n",
-      "                              ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-1-b968a57a586e>\", line 3, in <module>\n",
-      "    foo()\n",
-      "  File \"/Users/jhoward/subs_aai/execnb/tests/err.py\", line 2, in foo\n",
-      "    assert 13 == 98\n",
-      "           ^^^^^^^^\n",
-      "AssertionError\n",
-      "\n",
+      "['Traceback (most recent call last):\\n', '  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_23644/1421292703.py\", line 3, in <module>\\n    s.execute(\\'../tests/error.ipynb\\', exc_stop=True)\\n', '  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_23644/3609882568.py\", line 18, in execute\\n    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\\n', '  File \"/var/folders/ss/34z569j921v58v8n1n_8z7h40000gn/T/ipykernel_23644/3068237356.py\", line 19, in run_all\\n    if self.exc and exc_stop: raise self.exc from None\\n                              ^^^^^^^^^^^^^^^^^^^^^^^^\\n', '  File \"/Users/jhoward/miniconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\\n    exec(code_obj, self.user_global_ns, self.user_ns)\\n', '  File \"<ipython-input-1-b968a57a586e>\", line 3, in <module>\\n    foo()\\n', '  File \"/Users/jhoward/subs_aai/execnb/tests/err.py\", line 2, in foo\\n    assert 13 == 98\\n           ^^^^^^^^\\n', 'AssertionError\\n']\n",
       "\n"
      ]
     }
@@ -1850,9 +1825,9 @@
     "#|hide\n",
     "# `display_data` flushes stdout and stderr - in that order\n",
     "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1)\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n'], 'execution_count': None},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None},\n",
-    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data', 'execution_count': None}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'}])"
    ]
   },
   {
@@ -1864,7 +1839,7 @@
     "#|hide\n",
     "# Consecutive writes to stdout are grouped\n",
     "res = CaptureShell().run('print(1); print(2); print(3)')\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n'], 'execution_count': None}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']}])"
    ]
   },
   {
@@ -1876,8 +1851,8 @@
     "#|hide\n",
     "# Consecutive writes to stdout are grouped despite an intermediate write to stderr, which is captured after\n",
     "res = CaptureShell().run(\"import sys; print(1); print(2); sys.stderr.write('Error!'); print(3)\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n'], 'execution_count': None},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None}])"
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n', '2\\n', '3\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']}])"
    ]
   },
   {
@@ -1889,9 +1864,9 @@
     "#|hide\n",
     "# `execute_result` is always last\n",
     "res = CaptureShell().run(\"import sys; sys.stderr.write('Error!'); print(1); display(1); 1\")\n",
-    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n'], 'execution_count': None},\n",
-    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!'], 'execution_count': None},\n",
-    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data', 'execution_count': None},\n",
+    "test_eq(res, [{'name': 'stdout', 'output_type': 'stream', 'text': ['1\\n']},\n",
+    "              {'name': 'stderr', 'output_type': 'stream', 'text': ['Error!']},\n",
+    "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'display_data'},\n",
     "              {'data': {'text/plain': ['1']}, 'metadata': {}, 'output_type': 'execute_result', 'execution_count': None}])"
    ]
   },
@@ -1954,10 +1929,7 @@
        "  'execution_count': None,\n",
        "  'id': 'ea528db5',\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'name': 'stdout',\n",
-       "    'output_type': 'stream',\n",
-       "    'text': ['2\\n'],\n",
-       "    'execution_count': None}],\n",
+       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2\\n']}],\n",
        "  'source': 'print(a)',\n",
        "  'idx_': 1}]"
       ]
@@ -2110,6 +2082,27 @@
     "s = CaptureShell()\n",
     "s.run('a=1')\n",
     "s.complete('a.b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['flags=', 'pattern=']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.run('import re')\n",
+    "s.complete('re.compile(')"
    ]
   },
   {
