--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -986,9 +986,10 @@
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
     "        if otype == 'stream':\n",
-    "            txt = ansi_renderer(''.join(out['text']))\n",
+    "            txt = ansi_renderer(''.join(out[\"text\"]))\n",
     "            xtra = '' if out['name']=='stdout' else \"class='stderr'\"\n",
-    "            return f\"<pre {xtra}><code>{txt}</code></pre>\"\n",
+    "            is_err = '<span class' in txt\n",
+    "            return f\"<pre {xtra}><code class='{'nohighlight hljs' if is_err else ''}'>{txt}</code></pre>\"\n",
     "        elif otype in ('display_data','execute_result'):\n",
     "            data = out['data']\n",
     "            _g = lambda t: ''.join(data[t]) if t in data else None\n",
