Make mistletoe a standard dependency

--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -414,6 +414,7 @@
        "  'execution_count': 0,\n",
        "  'idx_': 0,\n",
        "  'metadata': {},\n",
+       "  'outputs': [],\n",
        "  'source': 'print(1)'}\n",
        "```"
       ],
@@ -423,6 +424,7 @@
        " 'directives_': {},\n",
        " 'execution_count': 0,\n",
        " 'metadata': {},\n",
+       " 'outputs': [],\n",
        " 'idx_': 0}"
       ]
      },
@@ -570,7 +572,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'cell_type': 'code', 'metadata': {}, 'source': 'print(1)', 'idx_': 0}]\n"
+      "[{'cell_type': 'code', 'execution_count': 0, 'metadata': {}, 'outputs': [], 'source': 'print(1)', 'idx_': 0}]\n"
      ]
     }
    ],
