--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -52,6 +52,8 @@
     "try: from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "except ImportError: set_matplotlib_formats = None\n",
     "\n",
+    "from mistletoe import markdown, HTMLRenderer\n",
+    "from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
     "\n",
     "from execnb.nbio import *\n",
     "from execnb.nbio import _dict2obj"
@@ -977,11 +979,13 @@
     "def _pre(s, xtra=''): return f\"<pre {xtra}><code>{escape(s)}</code></pre>\"\n",
     "def _strip(s): return strip_ansi(escape(s))\n",
     "\n",
-    "def render_outputs(outputs, ansi_renderer=_strip, include_imgs=True, pygments=False):\n",
-    "    try:\n",
-    "        from mistletoe import markdown, HTMLRenderer\n",
-    "        from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
-    "    except ImportError: return print('mistletoe not found -- please install it')\n",
+    "def render_outputs(outputs,\n",
+    "        ansi_renderer=_strip,\n",
+    "        include_imgs=True,\n",
+    "        pygments=False,\n",
+    "        pygments_renderer=PygmentsRenderer,\n",
+    "        html_renderer=HTMLRenderer\n",
+    "    ):\n",
     "    renderer = PygmentsRenderer if pygments else HTMLRenderer\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
