Clearer mistletoe message

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -981,7 +981,7 @@
     "    try:\n",
     "        from mistletoe import markdown, HTMLRenderer\n",
     "        from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
-    "    except ImportError: return print('mistletoe not found -- please install it')\n",
+    "    except ImportError: return print('mistletoe not found -- please install it for execnb.shell.render_output')\n",
     "    renderer = PygmentsRenderer if pygments else HTMLRenderer\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
