Modular HTML and Pygments rendering

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -52,9 +52,6 @@
     "try: from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "except ImportError: set_matplotlib_formats = None\n",
     "\n",
-    "from mistletoe import markdown, HTMLRenderer\n",
-    "from mistletoe.contrib.pygments_renderer import PygmentsRenderer\n",
-    "\n",
     "from execnb.nbio import *\n",
     "from execnb.nbio import _dict2obj"
    ]
@@ -983,9 +980,16 @@
     "        ansi_renderer=_strip,\n",
     "        include_imgs=True,\n",
     "        pygments=False,\n",
-    "        pygments_renderer=PygmentsRenderer,\n",
-    "        html_renderer=HTMLRenderer\n",
+    "        markdown_func=None, # If None, defaults to mistletoe.markdown\n",
+    "        pygments_renderer=None, # If None, defaults to mistletoe.contrib.pygments.PygmentsRenderer    \n",
+    "        html_renderer=None # If None, defaults to mistletoe.HTMLRenderer\n",
     "    ):\n",
+    "    try:\n",
+    "        if markdown_func is None: from mistletoe import markdown\n",
+    "        if pygments_renderer is None: from mistletoe import HTMLRenderer\n",
+    "        if html_renderer is None: from mistletoe.contrib.pygments import PygmentsRenderer    \n",
+    "    except ImportError:\n",
+    "        return 'No renderers supplied for execnb.shell.render_output. Quickfix is to install mistletoe'\n",
     "    renderer = PygmentsRenderer if pygments else HTMLRenderer\n",
     "    def render_output(out):\n",
     "        otype = out['output_type']\n",
@@ -999,7 +1003,7 @@
     "            _g = lambda t: ''.join(data[t]) if t in data else None\n",
     "            if d := _g('text/html'): return d\n",
     "            if d := _g('application/javascript'): return f'<script>{d}</script>'\n",
-    "            if d := _g('text/markdown'): return markdown(d, renderer=renderer)\n",
+    "            if d := _g('text/markdown'): return markdown_func(d, renderer=renderer)\n",
     "            if d := _g('text/latex'): return f'<div class=\"math\">${d}$</div>'\n",
     "            if include_imgs:\n",
     "                if d := _g('image/jpeg'): return f'<img src=\"data:image/jpeg;base64,{d}\"/>'\n",
